--- a/angular.json
+++ b/angular.json
@@ -7,25 +7,32 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
+          "lintFix": true,
           "style": "scss",
           "skipTests": true
         },
         "@schematics/angular:class": {
+          "lintFix": true,
           "skipTests": true
         },
         "@schematics/angular:directive": {
+          "lintFix": true,
           "skipTests": true
         },
         "@schematics/angular:guard": {
+          "lintFix": true,
           "skipTests": true
         },
         "@schematics/angular:module": {
+          "lintFix": true,
           "skipTests": true
         },
         "@schematics/angular:pipe": {
+          "lintFix": true,
           "skipTests": true
         },
         "@schematics/angular:service": {
+          "lintFix": true,
           "skipTests": true
         }
       },
@@ -88,6 +95,13 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "weather-app:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": ["tsconfig.app.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
