--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "clean": "rm -rf dist/*"
   },
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "@angular/cli": "8.1.2"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Robbert/only-happy-when-it-rains.git"
