--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@angular/forms": "8.1.2",
     "@angular/platform-browser": "8.1.2",
     "@angular/platform-browser-dynamic": "8.1.2",
+    "@angular/platform-server": "8.1.2",
     "@angular/router": "8.1.2",
+    "@nguniversal/express-engine": "8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "date-fns": "2.0.0-beta.3",
+    "express": "4.17.1",
     "rxjs": "6.4.0",
     "tslib": "1.9.0",
     "zone.js": "0.9.1"
@@ -41,6 +45,7 @@
     "@angular/cli": "8.1.2",
     "@angular/compiler-cli": "8.1.2",
     "@angular/language-service": "8.1.2",
+    "@types/express": "4.17.0",
     "@types/jest": "23.3.2",
     "@types/node": "8.9.4",
     "husky": "2.3.0",
@@ -55,10 +60,12 @@
     "stylelint-config-recommended-scss": "3.3.0",
     "stylelint-order": "3.0.1",
     "stylelint-scss": "3.9.3",
+    "ts-loader": "5.2.0",
     "ts-node": "7.0.0",
     "tslint": "5.15.0",
     "tslint-eslint-rules": "5.3.1",
-    "typescript": "3.4.3"
+    "typescript": "3.4.3",
+    "webpack-cli": "3.1.0"
   },
   "repository": {
     "type": "git",
