--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "8.1.2",
     "@angular/platform-browser-dynamic": "8.1.2",
     "@angular/router": "8.1.2",
+    "date-fns": "2.0.0-beta.3",
     "rxjs": "6.4.0",
     "tslib": "1.9.0",
     "zone.js": "0.9.1"
