Install stylelint for SCSS
https://stylelint.io

Configured with additional plugins for SCSS support and ordering of properties.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dev": "ng serve",
     "lint": "run-p 'lint:*'",
     "lint:editorconfig": "git ls-files '*.cfg' '*.cnf' '*.conf' '*.crt' '*.css' '*.csv' '*.dockerignore' '*.editorconfig' '*.env' '*.eslintignore' '*.eslintrc' '*.feature' '*.gitattributes' '*.gitignore' '*.groovy' '*.htm' '*.html' '*.ini' '*.json' '*.key' '*.less' '*.markdown' '*.md' '*.params' '*.pem' '*.php' '*.pub' '*.py' '*.rb' '*.rdf' '*.rq' '*.rsa' '*.scss' '*.service' '*.sh' '*.spec' '*.sql' '*.srl' '*.stylelintrc' '*.svg' '*.twig' '*.txt' '*.vcl' '*.wsdl' '*.xhtml' '*.xliff' '*.xml' '*.xqy' '*.xsd' '*.xsl' '*.xslt' '*.yml' '*AUTHORS' '*CONTRIBUTORS' '*Dockerfile' '*LICENSE' '*Makefile' '*README' '*Jenkinsfile' | xargs lintspaces --matchdotfiles --newline --editorconfig .editorconfig --ignores js-comments",
+    "lint:scss": "stylelint 'src/**/*.scss'",
     "lint:ts": "tslint --type-check --project tsconfig.json --config tslint.json './src/**/*.ts'",
     "lint-fix": "run-s 'lint-fix:*'",
     "lint-fix:prettier": "prettier --write '**/*.js' '**/*.css' '**/*.scss' '**/*.json' '**/*.jsx' '**/*.ts' '**/*.tsx' '*.yml'",
+    "lint-fix:scss": "stylelint --fix 'src/**/*.scss'",
     "lint-fix:ts": "npm run lint:ts -- --fix",
     "test": "jest --config=.jestrc.json --coverage --coverageDirectory tmp/coverage/ --verbose",
     "test-ci": "jest --config=.jestrc.json --runInBand --ci",
@@ -49,6 +51,10 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.17.1",
     "rxjs-tslint-rules": "4.24.3",
+    "stylelint": "10.1.0",
+    "stylelint-config-recommended-scss": "3.3.0",
+    "stylelint-order": "3.0.1",
+    "stylelint-scss": "3.9.3",
     "ts-node": "7.0.0",
     "tslint": "5.15.0",
     "tslint-eslint-rules": "5.3.1",
