--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "prebuild": "npm run clean",
     "build": "ng build",
-    "clean": "rm -rf dist/*",
+    "clean": "run-p 'clean:*'",
+    "clean:build": "rm -rf dist/*",
     "clean:test": "jest --clearCache",
     "dev": "ng serve",
+    "lint": "run-p 'lint:*'",
     "lint:editorconfig": "git ls-files '*.cfg' '*.cnf' '*.conf' '*.crt' '*.css' '*.csv' '*.dockerignore' '*.editorconfig' '*.env' '*.eslintignore' '*.eslintrc' '*.feature' '*.gitattributes' '*.gitignore' '*.groovy' '*.htm' '*.html' '*.ini' '*.json' '*.key' '*.less' '*.markdown' '*.md' '*.params' '*.pem' '*.php' '*.pub' '*.py' '*.rb' '*.rdf' '*.rq' '*.rsa' '*.scss' '*.service' '*.sh' '*.spec' '*.sql' '*.srl' '*.stylelintrc' '*.svg' '*.twig' '*.txt' '*.vcl' '*.wsdl' '*.xhtml' '*.xliff' '*.xml' '*.xqy' '*.xsd' '*.xsl' '*.xslt' '*.yml' '*AUTHORS' '*CONTRIBUTORS' '*Dockerfile' '*LICENSE' '*Makefile' '*README' '*Jenkinsfile' | xargs lintspaces --matchdotfiles --newline --editorconfig .editorconfig --ignores js-comments",
     "lint:ts": "tslint --type-check --project tsconfig.json --config tslint.json './src/**/*.ts'",
+    "lint-fix": "run-s 'lint-fix:*'",
     "lint-fix:prettier": "prettier --write '**/*.js' '**/*.css' '**/*.scss' '**/*.json' '**/*.jsx' '**/*.ts' '**/*.tsx' '*.yml'",
     "lint-fix:ts": "npm run lint:ts -- --fix",
     "test": "jest --config=.jestrc.json --coverage --coverageDirectory tmp/coverage/ --verbose",
@@ -42,6 +45,7 @@
     "jest-preset-angular": "7.1.1",
     "lint-staged": "8.1.7",
     "lintspaces-cli": "0.7.1",
+    "npm-run-all": "4.1.5",
     "prettier": "1.17.1",
     "rxjs-tslint-rules": "4.24.3",
     "ts-node": "7.0.0",
