Install and configure Prettier

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "ng serve",
     "lint:editorconfig": "git ls-files '*.cfg' '*.cnf' '*.conf' '*.crt' '*.css' '*.csv' '*.dockerignore' '*.editorconfig' '*.env' '*.eslintignore' '*.eslintrc' '*.feature' '*.gitattributes' '*.gitignore' '*.groovy' '*.htm' '*.html' '*.ini' '*.json' '*.key' '*.less' '*.markdown' '*.md' '*.params' '*.pem' '*.php' '*.pub' '*.py' '*.rb' '*.rdf' '*.rq' '*.rsa' '*.scss' '*.service' '*.sh' '*.spec' '*.sql' '*.srl' '*.stylelintrc' '*.svg' '*.twig' '*.txt' '*.vcl' '*.wsdl' '*.xhtml' '*.xliff' '*.xml' '*.xqy' '*.xsd' '*.xsl' '*.xslt' '*.yml' '*AUTHORS' '*CONTRIBUTORS' '*Dockerfile' '*LICENSE' '*Makefile' '*README' '*Jenkinsfile' | xargs lintspaces --matchdotfiles --newline --editorconfig .editorconfig --ignores js-comments",
     "lint:ts": "tslint --type-check --project tsconfig.json --config tslint.json './src/**/*.ts'",
+    "lint-fix:prettier": "prettier --write '**/*.js' '**/*.css' '**/*.scss' '**/*.json' '**/*.jsx' '**/*.ts' '**/*.tsx' '*.yml'",
     "lint-fix:ts": "npm run lint:ts -- --fix"
   },
   "dependencies": {
@@ -32,6 +33,7 @@
     "@angular/language-service": "8.1.2",
     "@types/node": "8.9.4",
     "lintspaces-cli": "0.7.1",
+    "prettier": "1.17.1",
     "ts-node": "7.0.0",
     "tslint": "5.15.0",
     "tslint-eslint-rules": "5.3.1",
