--- a/angular.json
+++ b/angular.json
@@ -7,6 +7,7 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
+          "changeDetection": "OnPush",
           "lintFix": true,
           "style": "scss",
           "skipTests": true
