--- a/package.json
+++ b/package.json
@@ -5,11 +5,32 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "npm run clean",
-    "clean": "rm -rf dist/*"
+    "build": "ng build",
+    "clean": "rm -rf dist/*",
+    "dev": "ng serve"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@angular/animations": "8.1.2",
+    "@angular/common": "8.1.2",
+    "@angular/compiler": "8.1.2",
+    "@angular/core": "8.1.2",
+    "@angular/forms": "8.1.2",
+    "@angular/platform-browser": "8.1.2",
+    "@angular/platform-browser-dynamic": "8.1.2",
+    "@angular/router": "8.1.2",
+    "rxjs": "6.4.0",
+    "tslib": "1.9.0",
+    "zone.js": "0.9.1"
+  },
   "devDependencies": {
-    "@angular/cli": "8.1.2"
+    "@angular-devkit/build-angular": "0.801.2",
+    "@angular/cli": "8.1.2",
+    "@angular/compiler-cli": "8.1.2",
+    "@angular/language-service": "8.1.2",
+    "@types/node": "8.9.4",
+    "ts-node": "7.0.0",
+    "tslint": "5.15.0",
+    "typescript": "3.4.3"
   },
   "repository": {
     "type": "git",
